0.19.0

2019-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement splash windows

2019-02-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* main_window.H: main_window_config stores the main
	window's application label and saved screen positions, and replaces
	these two parameters to the overloaded create_mainwindow().

	Add background_color to main_window_config, to set an initial custom
	main window background color.

2019-02-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add right pointer button context popups to the file dialog, with
	keyboard shortcuts, that implement simple file maintenance - delete
	and rename subdirectories and files, create new subdirectories.

2019-02-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* dialog_handler.C: Modal dialogs set _NET_WM_STATE to modal.

	* editor_impl.C: Blink the cursor only when window has focus.

	* file_dialog/file_dialog_impl.C: Add a right context popup menu
	in the file dialog (both the directory and the file section), that
	implement basic file operations.

	* dirlisting/filedirlist_manager_impl.C: Bug fix.

	* includes/x/w/main_windowobj.H: Redefine the parameters passed to
	standard dialogs' "Ok" and "Cancel" callbacks. Other dialog API
	tweaks and cleanups.

0.18

2019-02-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement static tooltips.

2019-02-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/input_field: add select_all() to the input field filter
	callbacks.

	* gridlayoutmanager_impl.C: Fix replace_cell() bug.

0.17

2019-01-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* Input field on_filter() API.

	* color_picker/color_picker.C: Fix bug in resetting the current
	color shown if the popup is closed, in some circumstances.

2019-01-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* richtext/richtext.C (richtextObj::redraw_whatsneeded): Fix
	multi-line input field display bug.

0.16

2019-01-20  Sam Varshavchik  <mrsam@courier-mta.com>
