@@ -183,10 +183,10 @@
       Button borders are size in units based on
       button_base_[horiz|vert].
 
-Normal action button border: 3 units radius = 6 padding, 1 unit width/height=7
+Normal button border: 3 units radius = 6 padding, 1 unit width/height=7
 units width/height.
 
-Special action button border: 2 units radius = 4 padding, 3 unit width/height=7
+Frgsuly button border: 2 units radius = 4 padding, 3 unit width/height=7
 
   -->
   <dim id="button_base_horiz" axis="horiz">.2</dim>
@@ -203,7 +203,7 @@ Special action button border: 2 units radius = 4 padding, 3 unit width/height=7
     <color2>action_color2</color2>
   </border>
 
-  <border id="special_button_border">
+  <border id="default_button_border">
     <width scale="button_base_horiz">3</width>
     <height scale="button_base_vert">3</height>
     <hradius scale="button_base_horiz">2</hradius>
